# slam-viewer

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: matches.rs  points.rs  simple.rs
src/: camera.rs  lib.rs  main.rs  opt.rs  point.rs  uniform.rs  viewer.rs
src/engine/: base.rs  builder.rs  event_loop.rs  mod.rs  timer.rs
src/pipes/: buffer.rs  builder.rs  format.rs  mod.rs  module.rs  renderer.rs  vertex.rs
src/window/: base.rs  builder.rs  camera.rs  camera.rs.bak  event.rs  mod.rs  uniform.rs
src/window/camera/: base.rs  controller.rs  coord.rs  frustrum.rs  mod.rs
src/window/isometries/: builder.rs  isometry.rs  mod.rs  renderer.rs  source.rs
src/window/lines/: builder.rs  line.rs  mod.rs  renderer.rs  source.rs
src/window/models/: matches.rs  mod.rs  points.rs  world.rs
src/window/points/: builder.rs  mod.rs  point.rs  renderer.rs  shader.frag  shader.vert  source.rs
src/window/points/renderer/: base.rs  mod.rs  world.rs
src/window/renderers/: mod.rs  world.rs
