[package]
name = "slam-viewer"
version = "0.1.2"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

description = "Simple wgpu based SLAM map viewer."
homepage = "https://github.com/podo-os"
readme = "README.md"
license = "BSD-3-Clause"

autoexamples = true

include = [
    "src/**/*.rs",
    "src/**/*.vert",
    "src/**/*.frag",
    "examples/**/*.rs",
    "examples/Cargo.toml",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.2"
failure = "0.1"
futures = "0.3"
glsl-to-spirv = "0.1"
image = "0.23"
nalgebra = "0.21"
num = "0.2"
slam-cv = "0.1"
wgpu = "0.5"
winit = "0.22"

[dev-dependencies]
rand = "0.7"
rand_distr = "0.2"

[profile.dev]
opt-level = 3
